# csit-mini-challenge

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: main.py
app/database/: __init__.py  database.py
app/router/: __init__.py  flight_router.py  flights_router.py  hotel_router.py  hotels_router.py
app/schema/: __init__.py  flight_schema.py  hotel_schema.py
app/service/: __init__.py  flight_service.py  hotel_service.py
app/util/: __init__.py  date_util.py
