[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ryan Cheung <ryan9cheung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"
flask = "^2.3.2"
flask-pymongo = "^2.3.0"
werkzeug = "^2.3.6"
python-decouple = "^3.8"
pydantic = "1.10.11"
flask-pydantic = "^0.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
force-exclude = '''
(
  /(
      \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | poetry.lock
  | pyproject.toml
  | .md
  | Dockerfile
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
